--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,10 @@ jobs:
 
       - uses: actions-rust-lang/setup-rust-toolchain@v1
 
-      - run: make geth
+      - run: make sidegeth
 
       - uses: actions/upload-artifact@v4
         with: 
           name: binaries-${{ runner.os }}
           if-no-files-found: error
-          # TODO: Update these when renaming the binaries produced
-          path: build/bin/geth
+          path: build/bin/sidegeth
